Refresh of Tech Notes page to make it easier to discover existing, updated, and new content

--- a/src/content/technotes/TN0044-graphql-and-rest-together.mdx
+++ b/src/content/technotes/TN0044-graphql-and-rest-together.mdx
@@ -1,5 +1,7 @@
 ---
 title: Using GraphQL and REST together
+summary: While GraphQL and REST do overlap, most organizations adopting GraphQL use both for different purposes and at different layers of the stack.
+published: 2023-12-07
 id: TN0044
 tags: [architecture-patterns]
 ---
