Styling changes, recent recently added and recently updated to 3 notes, alternate layout

--- a/src/content/technotes/TN0004-router-authentication.mdx
+++ b/src/content/technotes/TN0004-router-authentication.mdx
@@ -1,5 +1,7 @@
 ---
 title: Authenticating requests with the Apollo Router
+summary: When using the Apollo Router as the entry point to your federated supergraph, uou can combine strategies to handle a number of authentication requirements and practice "defense-in-depth".
+published: 2022-06-13
 id: TN0004
 tags: [server, router, auth]
 ---
@@ -181,20 +183,20 @@ This example coprocessor is written in Node.js and uses Express:
 ```js
 const app = express();
 app.use(bodyParser.json());
-app.post('/', async (req, res) => {
-  const {headers} = req.body;
+app.post("/", async (req, res) => {
+  const { headers } = req.body;
   const token = headers.authorization;
   const isValid = await validateToken(token);
   if (!isValid) {
     res.json({
       ...req.body,
-      control: {break: 401}
+      control: { break: 401 },
     });
   } else {
     res.json({
       ...req.body,
-      control: 'continue',
-      headers: {'x-claims': extractClaims(token)}
+      control: "continue",
+      headers: { "x-claims": extractClaims(token) },
     });
   }
 });
