--- a/src/content/technotes/index2.mdx
+++ b/src/content/technotes/index2.mdx
@@ -3,37 +3,36 @@ title: Apollo Tech Notes
 toc: false
 ---
 
+import { AllNotes, RecentlyUpdatedNotes, RecentlyAddedNotes } from "../../components/TechNotes";
+import { Heading, Box, Flex } from "@chakra-ui/react";
+
 This documentation set provides technical articles on specialized topics for Apollo tools and libraries.
 
-Select a tag to view a list of articles on the corresponding topic.
+<Flex gap="4" direction={{base: 'column-reverse', lg: 'row'}}>
+<Box flex={2}>
 
-import { AllNotes, RecentlyUpdatedNotes, RecentlyAddedNotes } from "../../components/TechNotes";
-import { SimpleGrid, Heading } from "@chakra-ui/react";
+<Box>
+  <AllNotes />
+</Box>
 
-<SimpleGrid spacing="4" minChildWidth="250px" {...props}>
-  <RecentlyAddedNotes />
-  <RecentlyUpdatedNotes />
-</SimpleGrid>
+</Box>
+<Box flex={1}>
 
-<SimpleGrid spacing="4" minChildWidth="250px" {...props}>
-<div>
+<RecentlyAddedNotes />
+<RecentlyUpdatedNotes />
 
-<Heading mb={2} size="lg">
+<Heading mt={8} mb={2} size="lg">
+  {" "}
   Reporting issues
 </Heading>
 
 If you find an issue with a tech note, feel free to use the **Edit on GitHub** button to create a new PR with the suggested changes. Otherwise, you can view the source and create a GitHub issue on the [apollographql/docs](https://github.com/apollographql/docs) repo.
 
-</div>
-<div>
-
-<Heading mb={2} size="lg">
+<Heading mt={8} mb={2} size="lg">
   Adding new tech notes
 </Heading>
 
 If you have an idea for a new tech note, please [create a new GitHub issue](https://github.com/apollographql/docs/issues) with the suggested changes or topic that you would like covered.
 
-</div>
-</SimpleGrid>
-
-<AllNotes />
+</Box>
+</Flex>
