Reduce headers size on variant 2

--- a/src/content/technotes/index2.mdx
+++ b/src/content/technotes/index2.mdx
@@ -21,14 +21,13 @@ This documentation set provides technical articles on specialized topics for Apo
 <RecentlyAddedNotes />
 <RecentlyUpdatedNotes />
 
-<Heading mt={8} mb={2} size="lg">
-  {" "}
+<Heading mt={8} mb={2} size="md">
   Reporting issues
 </Heading>
 
 If you find an issue with a tech note, feel free to use the **Edit on GitHub** button to create a new PR with the suggested changes. Otherwise, you can view the source and create a GitHub issue on the [apollographql/docs](https://github.com/apollographql/docs) repo.
 
-<Heading mt={8} mb={2} size="lg">
+<Heading mt={8} mb={2} size="md">
   Adding new tech notes
 </Heading>
 
