Updating header sizes on variant 3 and variant 4

--- a/src/content/technotes/index3.mdx
+++ b/src/content/technotes/index3.mdx
@@ -12,7 +12,7 @@ import { SimpleGrid, Heading } from "@chakra-ui/react";
 
 <div>
 
-<Heading mb={2} size="lg">
+<Heading mb={2} size="md">
   Reporting issues
 </Heading>
 
@@ -21,7 +21,7 @@ If you find an issue with a tech note, feel free to use the **Edit on GitHub** b
 </div>
 <div>
 
-<Heading mb={2} size="lg">
+<Heading mb={2} size="md">
   Adding new tech notes
 </Heading>
 
