Adding summary and publish date to some notes

--- a/src/content/technotes/TN0002-schema-naming-conventions.mdx
+++ b/src/content/technotes/TN0002-schema-naming-conventions.mdx
@@ -1,7 +1,8 @@
 ---
 title: Schema naming conventions
 id: TN0002
-description: Conventions for types, fields, and arguments
+summary: Conventions for naming types, fields, and arguments in your GraphQL schema.
+published: 2023-06-03
 tags: [schema-design]
 ---
 
@@ -10,6 +11,7 @@ tags: [schema-design]
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
 
 Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 </Tip>
 
 ## Enforcing conventions
