--- a/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
+++ b/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
@@ -1,6 +1,8 @@
 ---
 title: Connecting OpenTelemetry traces to Prometheus
 id: TN0003
+summary: Learn how to convert your operation traces into aggregated metrics without requiring manual instrumentation in order to provide a view of your graph's broader performance.
+published: 2022-06-03
 tags: [server, observability]
 ---
 
@@ -56,7 +58,7 @@ receivers:
 
 exporters:
   prometheus:
-    endpoint: '0.0.0.0:9464'
+    endpoint: "0.0.0.0:9464"
 
 processors:
   batch:
