--- a/src/content/technotes/TN0005-overload-protection.mdx
+++ b/src/content/technotes/TN0005-overload-protection.mdx
@@ -1,5 +1,7 @@
 ---
 title: Overload protection
+summary: As you add capabilities and users to your supergraph, you might introduce new usage patterns that add unexpectedly high load. Overload protection helps reduce the impact of these spikes while you optimize your supergraph to eliminate them entirely.
+published: 2022-07-08
 id: TN0005
 tags: [server, router, sre]
 ---
