--- a/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
+++ b/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
@@ -1,5 +1,7 @@
 ---
 title: Testing with Apollo Federation
+summary: Testing in GraphQL can involve many areas of your tech stack, from your frontend with Apollo Client to a backend with Apollo Server, or your infrastructure with your Apollo Router to the individual subgraphs in your supergraph.
+published: 2022-07-12
 id: TN0007
 tags: [client, server, federation, testing]
 ---
@@ -27,7 +29,7 @@ We recommend creating unit tests for each of your subgraph server resolvers. Res
 Using `@faker-js/faker` to mock a return value in `jest` looks something like the following:
 
 ```js
-import {faker} from '@faker-js/faker';
+import { faker } from "@faker-js/faker";
 
 const testUser = {
   userId: faker.datatype.uuid(),
@@ -36,7 +38,7 @@ const testUser = {
   avatar: faker.image.avatar(),
   password: faker.internet.password(),
   birthdate: faker.date.birthdate(),
-  registeredAt: faker.date.past()
+  registeredAt: faker.date.past(),
 };
 
 const mockedFunction = jest.fn().mockReturnValue(testUser);
