--- a/src/content/technotes/TN0010-reponse-type-pattern.mdx
+++ b/src/content/technotes/TN0010-reponse-type-pattern.mdx
@@ -1,5 +1,7 @@
 ---
 title: Designing response types
+summary: This response type pattern is useful for mutations because they can result in many valid failure states (such as attempting to delete an object that doesn't exist).
+published: 2022-08-03
 id: TN0010
 tags: [schema-design]
 ---
