--- a/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
+++ b/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
@@ -1,5 +1,7 @@
 ---
 title: Namespacing by separation of concerns
+summary: To improve the logical organization of our graph's capabilities, we can define namespaces for our root-level operation fields. These are object types that in turn define query and mutation fields that are all related to a particular concern.
+published: 2022-08-31
 id: TN0012
 tags: [schema-design]
 ---
