--- a/src/content/graphos/basics/routing/cloud.mdx
+++ b/src/content/graphos/basics/routing/cloud.mdx
@@ -82,6 +82,12 @@ You may exceed available machine memory with complex schemas. For example, Serve
 
 Upgrade to Cloud Dedicated for control over scaling and performance. You can [contact us](mailto:cloud@apollographql.com) for a free trial.
 
+## Apollo Router Versions on GraphOS Cloud
+
+GraphOS runs a fully managed fleet of Apollo Routers for you. The version of Apollo Router that is deployed is managed by Apollo. New Router releases are generally deployed to cloud routers within 30 days of being released. Some Router minor and patches releases may be skipped. These releases go through rigorous testing before being deployed across GraphOS Cloud. And when they are, an Apollo engineer oversees the process and rolls back any cloud routers that fail to boot up. While this is not a bullet proof process, for example if a slight change to query plan could result in degraded performance or edge case issues, you can generally be confident Apollo Router updates will not break your supergraphs.
+
+Currently, it is not possible to opt-in or opt-out of router updates. This process is entirely handled as described above. Advanced version management will be available in Cloud Dedicated later this year.
+
 ## Cloud routing FAQ
 
 #### What happens if my cloud router goes down?
