--- a/src/content/graphos/basics/routing/cloud.mdx
+++ b/src/content/graphos/basics/routing/cloud.mdx
@@ -59,6 +59,18 @@ A router deployment might fail due to a platform incident or schema composition 
 
 </Note>
 
+## Router version updates
+
+With cloud routing, GraphOS runs a fully managed fleet of Apollo Routers for you. Apollo manages the version of Apollo Router that is deployed and ensures that newly released versions are deployed to cloud routers within 30 days of release. Some minor and patch versions may be skipped.
+
+Router releases go through rigorous testing before deployment on GraphOS Cloud. During the deployment of new versions, an Apollo engineer actively oversees the process and rolls back any cloud routers that fail to boot up. While some edge cases may arise—for example, a query planner update could result in slightly degraded performance—router updates should not disrupt your supergraphs.
+
+<Note>
+
+Opting out of router updates to cloud routers is currently not possible. Advanced version management will be available in [Cloud Dedicated](./cloud-dedicated) in 2024.
+
+</Note>
+
 ## Automatic deletion of unused routers
 
 <Note>
@@ -76,17 +88,11 @@ This does not apply cloud routers on the Dedicated plan.
 
 ## Out of memory errors
 
-Serverless cloud routers have limited underlying compute resources, so there is a limit to the types of workloads they can handle. It is not possible to scale Serverless: it offers a fixed amount of throughput capacity.
+You may receive out of memory errors when using cloud routers on the [Serverless plan](./#router-comparison). Since the Serverless plan offers limited underlying compute resources, Serverless cloud routing offers a fixed amount of throughput capacity.
 
-You may exceed available machine memory with complex schemas. For example, Serverless does not support schemas with over 1,000 input types. Additionally, complex queries that return too much data or query too many subgraphs simulatenously may fail.
+Complex schemas may exceed available machine memory for Serverless cloud routers. For example, Serverless cloud routers don't support schemas with over 1,000 input types. Additionally, complex queries that return too much data or query too many subgraphs simultaneously may fail.
 
-Upgrade to Cloud Dedicated for control over scaling and performance. You can [contact us](mailto:cloud@apollographql.com) for a free trial.
-
-## Apollo Router Versions on GraphOS Cloud
-
-GraphOS runs a fully managed fleet of Apollo Routers for you. The version of Apollo Router that is deployed is managed by Apollo. New Router releases are generally deployed to cloud routers within 30 days of being released. Some Router minor and patches releases may be skipped. These releases go through rigorous testing before being deployed across GraphOS Cloud. And when they are, an Apollo engineer oversees the process and rolls back any cloud routers that fail to boot up. While this is not a bullet proof process, for example if a slight change to query plan could result in degraded performance or edge case issues, you can generally be confident Apollo Router updates will not break your supergraphs.
-
-Currently, it is not possible to opt-in or opt-out of router updates. This process is entirely handled as described above. Advanced version management will be available in Cloud Dedicated later this year.
+You can upgrade to [Cloud Dedicated](./cloud-dedicated) for control over scaling and performance. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> for a free trial.
 
 ## Cloud routing FAQ
 
