--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -384,7 +384,7 @@ If you omit this, the Sandbox initially loads an example query based on your sch
 Example:
 
 ```jsx
-intialState: {
+initialState: {
   document: `
   query ExampleQuery {
     books {
@@ -415,7 +415,7 @@ If provided, these variables should apply to the initial query you provide for [
 Example:
 
 ```jsx
-intialState: {
+initialState: {
   variables: {
     userID: "abc123"
   },
