Update legacy blog URLs

--- a/src/content/basics/resources/faq.mdx
+++ b/src/content/basics/resources/faq.mdx
@@ -159,7 +159,7 @@ Authentication and authorization are important topics to discuss with any API. G
 
 ### How can I secure my schema from malicious or expensive queries?
 
-Public APIs of any kind need some kind of safeguards against malicious queries. Since GraphQL allows for recursive queries, it wouldn't be hard to create a query that is overly complicated and acts as a DoS attack, even by accident. There are multiple ways to prevent something like this from happening, from complexity limiting to query depth limiting. Read the [guide on security](https://blog.apollographql.com/securing-your-graphql-api-from-malicious-queries-16130a324a6b) to learn more.
+Public APIs of any kind need some kind of safeguards against malicious queries. Since GraphQL allows for recursive queries, it wouldn't be hard to create a query that is overly complicated and acts as a DoS attack, even by accident. There are multiple ways to prevent something like this from happening, from complexity limiting to query depth limiting. Read the [guide on security](https://www.apollographql.com/blog/9-ways-to-secure-your-graphql-api-security-checklist) to learn more.
 
 ### What kinds of cache should I set up?
 
@@ -189,7 +189,7 @@ You have a good understanding of how to write, deploy, and monitor GraphQL in pr
 
 ### How do I organize schema code to scale for a larger project?
 
-Keeping all schema code together makes sense for smaller projects, but once a project reaches a certain size, or has many people working on it, managing conflicts in the same file and code navigation can get difficult. Splitting types and resolvers up into smaller files can make this process much easier. Read [this blog post](https://blog.apollographql.com/modularizing-your-graphql-schema-code-d7f71d5ed5f2) to learn more.
+Keeping all schema code together makes sense for smaller projects, but once a project reaches a certain size, or has many people working on it, managing conflicts in the same file and code navigation can get difficult. Splitting types and resolvers up into smaller files can make this process much easier. Read [this blog post](https://www.apollographql.com/blog/modularizing-your-graphql-schema-code) to learn more.
 
 ### How can I test my client?
 
