--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -1,37 +1,19 @@
 ---
 title: Apollo Tech Notes
-toc: false
 ---
+
+import { AllNotes } from "../../components/TechNotes";
 
 This documentation set provides technical articles on specialized topics for Apollo tools and libraries.
 
-import { AllNotes, RecentlyUpdatedNotes, RecentlyAddedNotes } from "../../components/TechNotes";
-import { SimpleGrid, Heading } from "@chakra-ui/react";
+Select a tag to view a list of articles on the corresponding topic.
 
-<SimpleGrid spacing="4" minChildWidth="250px" {...props}>
-<div>
+<AllNotes />
 
-<Heading mb={2} size="lg">
-  Reporting issues
-</Heading>
+## Reporting issues
 
 If you find an issue with a tech note, feel free to use the **Edit on GitHub** button to create a new PR with the suggested changes. Otherwise, you can view the source and create a GitHub issue on the [apollographql/docs](https://github.com/apollographql/docs) repo.
 
-</div>
-<div>
-
-<Heading mb={2} size="lg">
-  Adding new tech notes
-</Heading>
+## Adding new tech notes
 
 If you have an idea for a new tech note, please [create a new GitHub issue](https://github.com/apollographql/docs/issues) with the suggested changes or topic that you would like covered.
-
-</div>
-</SimpleGrid>
-
-<SimpleGrid spacing="4" minChildWidth="250px" {...props}>
-  <RecentlyAddedNotes />
-  <RecentlyUpdatedNotes />
-</SimpleGrid>
-
-<AllNotes />
