Update "summary" to "description" in tech notes

--- a/src/content/technotes/TN0001-client-id-enforcement.mdx
+++ b/src/content/technotes/TN0001-client-id-enforcement.mdx
@@ -1,6 +1,6 @@
 ---
 title: Client ID enforcement
-summary: Require client details and operation names to help monitor schema usage.
+description: Require client details and operation names to help monitor schema usage.
 published: 2022-05-31
 id: TN0001
 tags: [server, observability, router]
