--- a/src/content/technotes/TN0002-schema-naming-conventions.mdx
+++ b/src/content/technotes/TN0002-schema-naming-conventions.mdx
@@ -1,7 +1,7 @@
 ---
 title: Schema naming conventions
 id: TN0002
-summary: Conventions for naming types, fields, and arguments in your GraphQL schema.
+description: Conventions for naming types, fields, and arguments in your GraphQL schema.
 published: 2023-06-03
 tags: [schema-design]
 ---
