--- a/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
+++ b/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Testing with Apollo Federation
-summary: Testing in GraphQL can involve many areas of your tech stack, from your frontend with Apollo Client to a backend with Apollo Server, or your infrastructure with your Apollo Router to the individual subgraphs in your supergraph.
+description: Testing in GraphQL can involve many areas of your tech stack, from your frontend with Apollo Client to a backend with Apollo Server, or your infrastructure with your Apollo Router to the individual subgraphs in your supergraph.
 published: 2022-07-12
 id: TN0007
 tags: [client, server, federation, testing]
