--- a/src/content/technotes/TN0008-production-readiness-checklist.mdx
+++ b/src/content/technotes/TN0008-production-readiness-checklist.mdx
@@ -1,6 +1,6 @@
 ---
 title: Production readiness checklist
-summary: We recommend that you read through this checklist and identify critical features for your team before your supergraph begins handling production traffic.
+description: We recommend that you read through this checklist and identify critical features for your team before your supergraph begins handling production traffic.
 published: 2022-07-11
 id: TN0008
 tags: [sre, router, server, client]
