--- a/src/content/technotes/TN0009-gateway-performance.mdx
+++ b/src/content/technotes/TN0009-gateway-performance.mdx
@@ -1,6 +1,6 @@
 ---
 title: Improving Apollo Gateway performance
-summary: If your supergraph gateway uses Apollo Server with the @apollo/gateway library, this article provides recommendations for improving your gateway's performance.
+description: If your supergraph gateway uses Apollo Server with the @apollo/gateway library, this article provides recommendations for improving your gateway's performance.
 published: 2022-07-28
 id: TN0009
 tags: [gateway, performance]
