--- a/src/content/technotes/TN0013-monolith-to-federation.mdx
+++ b/src/content/technotes/TN0013-monolith-to-federation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Moving a GraphQL monolith to Apollo Federation
-summary: Steps for migrating from a GraphQL monolith to multiple subgraphs with Apollo Federation
+description: Steps for migrating from a GraphQL monolith to multiple subgraphs with Apollo Federation
 published: 2022-09-06
 id: TN0013
 tags: [federation, server]
