--- a/src/content/technotes/TN0029-relay-style-connections.mdx
+++ b/src/content/technotes/TN0029-relay-style-connections.mdx
@@ -1,6 +1,6 @@
 ---
 title: Relay-style connections and pagination FAQ
-summary: Relay is an opinionated GraphQL client, and its associated Connections specification defines a pattern for expressing one-to-many relationships in a GraphQL schema.
+description: Relay is an opinionated GraphQL client, and its associated Connections specification defines a pattern for expressing one-to-many relationships in a GraphQL schema.
 published: 2023-01-17
 id: TN0029
 tags: [best-practices, schema-design]
