--- a/src/content/technotes/TN0042-sdui-client-design.mdx
+++ b/src/content/technotes/TN0042-sdui-client-design.mdx
@@ -1,6 +1,6 @@
 ---
 title: Server-driven UI client design
-summary: In server-driven UI (SDUI), the client's goal is to handle pixels, not data. The client should simply take what the API provides and render it in the proper location.
+description: In server-driven UI (SDUI), the client's goal is to handle pixels, not data. The client should simply take what the API provides and render it in the proper location.
 published: 2023-10-09
 id: TN0042
 tags: [client, server-driven-ui]
