--- a/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
+++ b/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
@@ -1,6 +1,6 @@
 ---
 title: GraphQL as an abstraction layer
-summary: One of the advantages of using GraphQL is that it provides an abstraction between service consumers and the teams maintaining the backend services.
+description: One of the advantages of using GraphQL is that it provides an abstraction between service consumers and the teams maintaining the backend services.
 published: 2023-11-15
 id: TN0043
 tags: [architecture-patterns]
