--- a/src/content/technotes/TN0016-router-resource-management.mdx
+++ b/src/content/technotes/TN0016-router-resource-management.mdx
@@ -1,5 +1,7 @@
 ---
 title: Managing Apollo Router resources in Kubernetes
+description: Determining the correct resource requests and limits for your application pods in a Kubernetes system is not an exact science. Your specific needs depend on many factors.
+published: 2022-10-31
 id: TN0016
 tags: [router, kubernetes]
 ---
@@ -22,10 +24,10 @@ Our general recommendation for Kubernetes is to start with these requests and li
 ```yaml
 resources:
   requests:
-    memory: '1G'
-    cpu: '1000m'
+    memory: "1G"
+    cpu: "1000m"
   limits:
-    memory: '2G'
+    memory: "2G"
     # no CPU limit to avoid throttling
 ```
 
