--- a/src/content/technotes/TN0014-contracts-patterns.mdx
+++ b/src/content/technotes/TN0014-contracts-patterns.mdx
@@ -1,5 +1,7 @@
 ---
 title: Contracts usage patterns
+description: Contracts enable teams to contribute to a single unified graph while also delivering use-case-specific schemas to different types of consumers.
+published: 2022-08-29
 id: TN0014
 tags: [contracts, schema-design]
 ---
@@ -8,7 +10,8 @@ tags: [contracts, schema-design]
 
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Contracts](https://www.apollographql.com/tutorials/contracts) course on Odyssey.
 
- Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 </Tip>
 
 [Contracts](/graphos/delivery/contracts/) enable teams to contribute to a single unified graph while also delivering use-case-specific schemas to different types of consumers. Graph administrators define filter rules to generate **contract schemas** that are a strict subset of the source supergraph.
