--- a/src/content/technotes/TN0017-interfaces.mdx
+++ b/src/content/technotes/TN0017-interfaces.mdx
@@ -1,5 +1,7 @@
 ---
 title: Recommended usage for GraphQL interfaces
+description: GraphQL interfaces enable schema fields to return one of multiple object types, all of which must implement that interface.
+published: 2022-10-31
 id: TN0017
 tags: [schema-design, federation]
 ---
