--- a/src/content/technotes/TN0019-federation-n-plus-1.mdx
+++ b/src/content/technotes/TN0019-federation-n-plus-1.mdx
@@ -1,5 +1,7 @@
 ---
 title: How Federation handles the N+1 query problem
+description: GraphQL developers quickly encounter the infamous "N+1 query problem" with operations that return a list. The article talks about how N+1 is handled in a federated graph.
+published: 2022-11-15
 id: TN0019
 tags: [federation, subgraphs]
 ---
