Provoke the linter

--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -5,6 +5,12 @@ description: The heart of Apollo GraphOS
 
 As its name suggests, **GraphOS** is a platform for building and managing **graphs**. Each graph corresponds to a GraphQL service in your organization.
 
+## The Following Edits Should Prove Problematic.
+
+Twas brillig, and the slithy toves did gyre and gimble in the wabe; all mimsy were the back-ends, and the Graphql outgrabe.
+
+But it works!  There are two spaces before this sentence.
+
 A GraphQL service usually runs in more than one environment (such as staging or production), so every graph in GraphOS has one or more **variants** that each correspond to one environment:
 
 ```mermaid
